# University-Recommendation-system

./: .coverage  .dockerignore  .env  .env.example  .gitignore  DASHBOARD.py  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Procfile  README.md  STARTUP.py  TOPUNIVERSITIES_TESTING_REPORT.md  TopUniversities_Scraper_Audit.md  check_leiden.py  comprehensive_scraper.py  coverage.xml  data_viewer.py  database.py  debug_cf.html  download_missing_logos.py  export_data.py  fill_database_comprehensive.py  main.py  output.txt  pyproject.toml  render.yaml  requirements-deploy.txt  requirements-dev.txt  requirements.txt  requirements_streamlit.txt  run_api.py  run_scraper.py  schema.py  scraper.py  scraper_monitor.py  scraper_with_export.py  setup.py  show_real_data.py  streamlit_app.py  (+13 more)
.github/workflows/: ml-quality-gate.yml
.streamlit/: config.toml
chrome-extension/: TESTING_CHECKLIST.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js  test-form.html
data/exports/: programs_20251128_120427.csv  programs_20251128_121438.csv  universities_20251128_120427.csv  universities_20251128_121438.csv  validation_milestones.json  validation_report_20251129_172139.json  validation_report_20251129_205247.json  validation_report_20251129_205458.json  validation_report_20251129_205727.json
docs/: TOPUNIVERSITIES_INTEGRATION.md
evaluation/: __init__.py  fairness.py  ranking_metrics.py
exported_data/: universities_programs.csv  universities_programs.json  universities_programs.xlsx  universities_programs_pandas.xlsx
inference/: __init__.py  similarity_index.py
mlops/: __init__.py  artifact_manager.py  ci_quality_gate.py  drift_detector.py  experiment_tracker.py
model_artifacts/: classification_report.txt  label_encoder.joblib  model_metadata.json  requirements.txt  serve.py
output/: cleaned_programs.json  program_name.txt  programs.json  test_api_keys.json  test_cleaned_20.json  test_cleaned_5.json  test_out.json  test_programs.json  test_structured.json
pipeline/: __init__.py  currency.py  feature_registry.py  input_validator.py  leakage_checks.py  prediction_logger.py  ranking_normalizer.py  scoring.py  tier_derivation.py  topuni_transformer.py
scripts/: STARTUP.py  analyze_dataset.py  build_notebook.py  data_exporter.py  diagnose_topuni.py  dump_imperial.py  enrich_with_topuniversities.py  expand_database.py  export_data.py  fetch_programs_to_db.py  fill_database_comprehensive.py  generate_programs.py  import_rankings.py  import_topuniversities.py  inspect_data.py  monitor_quality.py  patch.py  populate_test_data.py  retrain_model.py  run_scraper.py  scraper_with_export.py  show_real_data.py  test_http.py  test_recommendation.py  test_scraper.py  test_single_program.py  test_structured.py  test_topuniversities.py  validate_urls.py  verify_data.py  verify_fields.py  verify_notebook.py  verify_real_data.py
src/: __init__.py
src/analyzers/: __init__.py  quality_analyzer.py
src/api/: auth.py  main.py  recommendation_models.py
src/cli/: Untitled-1.md  __init__.py  commands.py  dashboard.py  data_viewer.py
src/core/: __init__.py  circuit_breaker.py  config.py  constants.py  exceptions.py  retry.py
src/database/: __init__.py  mongodb.py  repositories.py
src/models/: __init__.py  qs_ranking.py  university.py
src/scrapers/: __init__.py  base_scraper.py  content_extractor.py  link_discoverer.py  sample_data.json  topuniversities_scraper.py  university_scraper.py
src/services/: __init__.py  cached_llm_service.py  enrichment_service.py  llm_service.py  ranking_service.py  recommendation_service.py  scraper_service.py  validation_service.py
src/services/cache/: __init__.py  cache.py
src/services/llm/: __init__.py  base_provider.py  deepseek_provider.py  groq_provider.py  provider_factory.py
src/university_recommendation_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_database.py  test_export.py  test_leakage_regression.py  test_models.py  test_scraper_comprehensive.py
tests/integration/: test_all_universities.py  test_all_universities_moved.py  test_universities_bottom_up.py  test_universities_bottom_up_moved.py
tests/utils/: check_leiden.py
tests/validation/: validate_universities.py
